<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/memberId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/member_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/member_pw"
                android:inputType="text" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="16dp">


            <Button
                android:id="@+id/firmwareSelectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_fw" />

        
            <Button
                android:id="@+id/apkSelectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_apk" />

    
            <ListView
                android:id="@+id/firmwareListView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp" />

        
            <Button
                android:id="@+id/downloadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/download" />

    
            <LinearLayout
                android:id="@+id/zipTxtRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/zipButton"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/zip"
                    android:textSize="12sp"
                    android:padding="4dp"
                    android:background="@android:color/darker_gray"
                    android:textColor="@android:color/white"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/txtButton"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="@string/txt"
                    android:textSize="12sp"
                    android:padding="4dp"
                    android:background="@android:color/darker_gray"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        
        </LinearLayout>
    </LinearLayout>
</ScrollView>
